# mesh_processing_2023

./: CMakeLists.txt  Sphericon.stl  Sphericon_license.txt  Stanford_Bunny.stl  Stanford_Bunny_license.txt  meshproc.cpp  read_stl.cpp
