cmake_minimum_required(VERSION 3.16)
project(mesh_processing)

macro(enable_asan target scope)
    if(MSVC)
        target_compile_options(${target} ${scope} $<$<CONFIG:Debug,RelDeb>:/fsanitize=address>)
        target_link_options(${target} ${scope} $<$<CONFIG:Debug,RelDeb>:/fsanitize=address>)
    else()
        target_compile_options(${target} ${scope} $<$<CONFIG:Debug,RelDeb>:-fsanitize=address>)
        target_link_options(${target} ${scope} $<$<CONFIG:Debug,RelDeb>:-fsanitize=address>)
    endif()
endmacro()

add_executable(meshproc meshproc.cpp)
target_compile_features(meshproc PUBLIC cxx_std_20)
set_target_properties(meshproc PROPERTIES CXX_EXTENSIONS OFF)
option(ENABLE_ASAN "Enable ASAN in Debug and RelDeb builds" ON)

if(ENABLE_ASAN)
    message(STATUS "Enabling ASAN")
    enable_asan(meshproc PRIVATE)
endif()
